Changes with APR-ICONV a15

  *) A first blush at a working build system.
     [jean-frederic clere <jfrederic.clere@fujitsu-siemens.com>]

  *) First set of changes for APR compatibility (eliminated __inline).
     [jean-frederic clere <jfrederic.clere@fujitsu-siemens.com>]

Changes with APR-ICONV a9

  *) Source moved from the apr library into it's own repository
     due to size concerns.  Still requires portability overhaul.